Add collisions and hyenas

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <script src="./js/settings.js"></script>
         <script src="./js/controls.js"></script>
         <script src="./js/simba.js"></script>
+        <script src="./js/hyena.js"></script>
         <script src="./js/platforms.js"></script>
         <script src="./js/simbasAdventure.js"></script>
+        <script src="./js/collisions.js"></script>
     </head>
     <body>
     </body>
